base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ingress-demo
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http
