base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    nerc.mghpcc.org/external-ingress: "true"
  name: external-ingress-demo
spec:
  host: example.apps.shift.nerc.mghpcc.org
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: external-ingress-demo
